required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Grid layer: remove drawing of unnecessary gird lines (#3433) 

- Avoid errors and debug output for CONNECTION-less OGR layers in mappool.c
  if they have a tileindex.

- Implement support for raw imagemodes to use NULLVALUE formatoption to set 
  the background value of result images, and to try and mark nodata (#1709)

- Implement support for wcs_rangeset_nullvalue to set NULLVALUE and
  return null value definition in describe coverage result (#655)

- Try to avoid exhausting the color table when rendering 24bit key
  images into 8bit results (#1594)

- Avoid crash, and ensure error report when loading keyimage fails (#1594)

- Improve the handling of simple string comparisons for raster classified
  values (#3425) 

- Generate good SQL when using !BOX! token and no filter. (#3422)

- Implement non-shapefile tileindex support for raster query (#2796).

- Improve support for [red/green/blue] classification expressions for
  raster query (#1021)

- Fixed imageObj->saveImage() sends unnecessary headers (#3418)

- Avoid automatically regenerating maplexer.c (#2310)

- Change rounding rules for average resampling (#1932)

- Implement support for filename encryption per RFC 18 for rasters (#3416)

- Fixed segfault when using shapefile with empty geometry and tileindex (#3365)

- Avoid race condition on core_lock on win32 mutex init (#3396)

- Avoid use of inline keyword for C code (#3327)

- Support WFS parsing through libxml2 (#3364)

- Fixed PHP/MapScript imageObj->saveImage() function (#3410)

- Implement wms_nonsquare_ok metadata item for WMS servers that do